--- a/src/App.css
+++ b/src/App.css
@@ -21,11 +21,10 @@
 
 .search-bar {
   margin: 0 auto;
-  padding:2em;
+  padding-top:2em;
 }
 
 .search-results {
-  padding:2em;
 }
 
 .desc-icon {
@@ -36,4 +35,14 @@
   margin-top: 0;
   margin-bottom: .5em;
   font-weight: 500;
+}
+
+.author {
+  font-style: italic;
+}
+
+.pagination {
+  padding: 1em;
+  margin: 0 auto;
+  max-width: 15em
 }
