--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,9 @@
   padding-right: 1em;  
   font-style: italic;
 }
+
+.response-time {
+  padding-top: 1em;
+  margin: 0 auto;
+  max-width: 15em;
+}
